<resources>
    <string name="app_name">Bahai Tamil Prayers</string>

    <string name="morning_prayer">என் கடவுளே, நான் உமது பாதுகாப்பினில் கண்விழித்துள்ளேன்; அப் பாதுகாப்பிடத்தினைத்
                                  தேடுபவன் உமது ஆதரவெனும் புகலிடத்திலும்,உமது பாதுகாப்பெனும்  கோட்டையிலும்
                                  வசிப்பது பொருத்தமே.என் பிரபுவே, என் புற உருவினைக் காலைக் கதிரவனின் கிரணங்களினால்
                                  ஒளிப்பெறச் செய்தது போல் எனது அக உருவினையும் உமது வெளிப்பாடெனும் பகலூற்றின்
                                  பிரகாசங்களினால் ஒளிரச் செய்வீராக. \n
</string>
    <string name="title">காலை வேளை - Morning prayer</string>
    <string name="footer">-பஹாவுல்லா-</string>

    <string name="mankind_prayer">அன்பான பிரபுவே, நீர் மனிதர்கள் யாவரையும் ஒரே இனத்திலிருந்து ஆக்கியுள்ளீர். அவர்கள் அனைவரும்
                                  ஒரே குடும்பத்தினராக வாழ விதித்துள்ளீர். உமது தெய்வீக முன்னிலையில் அவர்களெல்லாரும் உமது ஊழியர்களே.
                                  மனித இனம் முழுவதும் உமது கூடாரத்தின்  கீழ் பாதுகாக்கப்படுகின்றது:  உமது  வள்ளன்மை என்னும் அருட்பீடத்தின
                                  ் அருகில் அவர்கள் அனைவரும் ஒன்றுகூடியுள்ளனர்:  அனைவருமே உமது அருட்கொடை என்னும்  தீபத்தின் ஒளியினால்
                                  பிர்காசிக்கின்றனர். இறைவா! நீர் எல்லாரிடத்திலும்  அன்பாயிருக்கின்றீர்: எல்லாரின் தேவையையும் நிறைவு
                                  செய்துள்ளீர்: யாவரையும் பாதுகாக்கின்றீர்:  எல்லாருக்கும் வாழ்வளிக்கின்றீர்.  அவர்கள் ஒவ்வொருவருக்கும் திறமைளையும்
                                  சக்திகளையும் வழங்கியுள்ளீர், அனைவரும்  உமது  கருணைக் கடலில் ழூழ்கி இருக்கின்றனர்.

                                  கருணைமிக்கப்  பிரபுவே!  யாவரையும் ஒன்று படுத்துவீராக.  உமது சமயங்களிடையே இணக்கத்தை ஏற்படுத்தி,  தேசங்களை
                                  ஒரே நாடாக   ஆக்குவீராக;  அதனால்  அவை  ஒவ்வொன்றும்  மற்றொன்றை  ஒரே  குடும்பத்தினராகவும்,  மண்ணுலகம்
                                  அனைத்தையுமே  ஒரே  இல்லமாகவும்  காணக்கூடும்.  அவர்கள்  அனைவரும்  ஒன்றிணைந்து பூரண  இணக்கத்துடன்  வாழ்ந்திடுவாராக.
                                  கடவுளே!  மனித  இன ஒருமையெனும்  விருதுக் கொடியை  நாட்டுவீராக;  கட்வுளே! அதி உயரிய  சமாதானத்தை  நிலை நாட்டுவீராக;
                                  கடவுளே!  உள்ளங்களை  ஒன்றிணைத்திடுவீராக;  அன்புமிக்கத் தந்தையே!  உமது அன்பெனும் நறுமணத்தின்  வாயிலாக,   எங்கள்  உள்ளங்களை மகிழ்வுறச்
                                  செய்வீராக.  உமது   வழிகாட்டுதல் என்னும்  ஒளியின் வாயிலாக  எங்களின் கண்களைப்  பிரகாசிக்கச்  செய்வீராக.  உமது  வசனங்களின் கீதத்தினால்
                                  எங்களின்  செவிகளை இன்புறச்  செய்து,  உமது அருள் என்னும்  காேட்டையினுள்   எல்லாரையும் பாதுகாப்பீராக.

                                  நீரே  வல்லவரும்  சக்திமிக்கவரும் ஆவீர்;  பாவங்களை  மன்னிப்பவரும்  நீரே;  மனித  இனம்  அனைத்தின் குறைபாடுகளைப்  பொருட்படுத்தாதவரும்  நீரே.
    </string>
    <string name="title_mankind">மனிதகுலம் - Mankind prayer</string>
    <string name="footer_mankind">அப்துல் பஹா-</string>

    <string name="departed_prayer">என்  கடவுளே!  குற்றங்களை  மன்னிப்பவரே! சன்மானங்கள் வழங்குபவரே! வேதனைகளைப்  போக்குபவரே!  தூல உடலைத் துறந்து ஆன்மீக உலகினை
                                   வந்தடைந்தோரின் பாவங்களை  மன்னிக்குமாறு  நான்  மெய்யாகவே, உம்மிடம் மன்றாடுகின்றேன்.  என் பிரபுவே! அவர்களைக்  குற்றங்களிலிருந்து
                                   தூய்மைப்படுத்துவீராக;  அவர்களின்  கவலைகளை அகற்றிடுவீராக;  அவர்களது  இருளை ஒளியாக  மாற்றுவீராக.  அவர்களைப்  பேரின்பமெனும் பூங்காவில்
                                   பிரவேசிக்கச்  செய்வீராக;  அதி  தூய நீரினால்  அவர்களைச்  சுத்தப்படுத்தி,  அதி  உயர்வான  மலையின் மீதுள்ள உமது சுடரொளிகளைக்  கண்ணுற  அனுமதிப்பீராக.
    </string>

    <string name="title_departed">இறந்தவர்களுக்கானது - Departed</string>
    <string name="footer_departed">-அப்துல் பஹா-</string>

    <string name="parents_prayer">பிரபுவே,  எங்களின்  கெஞ்சிடும்  கரங்கள்  உமது  தயை, அருட்கொடை  என்னும்   சுவர்க்கத்தின்பால்  ஏந்தப்பட்டுள்ளதை  நீர்  பார்க்கின்றீர்.  உமது  வள்ளன்மைமிகு  சலுகை,
                                 மிகுதியான உதவிகள்  ஆகிய  பொக்கிஷங்களினால்  அவை  நிரப்பப்பட  அருள்வீராக.  எங்களையும்,  எங்கள்  தந்தையர்களையும், எங்கள்  தாயார்களையும்  மன்னித்தருளி, உமது  கிருபை,
                                 தெய்வீக தயாளம்  என்னும்  சமுத்திரத்திலிருந்து  நாங்கள்  எவற்றையெல்லாம்  விரும்புகிறோமோ அவற்றை  நிறைவேற்றுவீராக.  எங்கள் இதயங்களின்   நேசரே, உந்தன் பாதையில்  நாங்கள்
                                 ஆற்றிய பணிகள் யாவற்றையும்  ஏற்றுக்  கொள்வீராக. மெய்யாகவே,  நீரே, அதி சக்தி வாயிந்தவர், அதி உயர்வானவர்,
                                 ஒப்பற்றவர்,  ஏகமானவர்,  மன்னிப்பவர், கிருபையாளார்.
    </string>
    <string name="title_parents">பெற்றோர் - Parents</string>
    <string name="footer_parents">-பஹாவுல்லா-</string>

    <string name="forgiveness_prayers">என் கடவுளே, எங்கள் பிரபுவே, தங்களால் வெறுக்கத்தக்க அனைத்திலிருந்தும் உங்களின் அருளின் மூலமாக எங்களைப் பாதுகாத்து, தங்களுக்கு ஏற்புடையனவற்றை எங்கள்பால் வழங்கியருள்வீராக.
                                       தங்களின் வள்ளன்மையிலிருந்து எங்களுக்கு மேலும் வழங்கி ஆசீர்வதிப்பீராக. நாங்கள் செய்துள்ளவற்றிற்காக  எங்களை மன்னித்து, எங்களின் பாவங்களைத் தூய்மைப்படுத்தி, உங்களது அருள்மிகு
                                       மன்னிக்குந்தன்மையைக் கொண்டு, எங்களை மன்னித்தருள்வீராக. மெய்யாகவே   தாங்களே   அதிமேன்மையானவர்; சுயஜீவியானவர்.
    </string>
    <string name="title_Forgiveness">மன்னிப்பு - Forgiveness</string>
    <string name="footer_forgiveness">பாப்-</string>

    <string name="assistance_prayer">உந்தன் திருநாமத்தின் சக்தி என் கவசமாகும் போது யாதொரு தீங்கும் என்னைத் தாக்கவியலாது.உமதுன்பு என்னுள்ளத்தில் குடி கொள்ளும்போது இவ்வுலகின் அனைத்து இன்னல்களும் என்னை ஒரு போதும்
                                     கலக்கமடையச் செய்யாது
    </string>
    <string name="title_assistance">சோதனை வேளைகளில் உதவி -  Assistance</string>
    <string name="footer_assistance">-பஹாவுல்லா-</string>

    <string name="test_prayers">என் இறைவா, உமது வலிமையின் சாட்சியாக உம்மை மனப்பூர்வமாக வேண்டிக் கொள்கின்றேன்!  சோதனைக் காலங்களில் என்னைத் தீங்கெதுவும் தாக்கதிருக்கச் செய்வீராக; கவனக் குறைவான வேளைகளில் உமது அருட்தூண்டுதலின்
                                வாயிலாக, எனது காலடிகளை  நேர்வழியில் நடத்திடுவீராக. நீரே கடவுள், நீர் விரும்பியதைச் செய்யும் ஆற்றல் படைத்தவர் நீரே. எவருமே உமது விருப்பத்தை எதிர்க்கவோ, உமது  நோக்கத்தைத் தடுத்து  நிறுத்தவோ இயலாது.
    </string>
    <string name="title_test">சோதனைகளும் இடுக்கண்களும் - Test and Difficuluties</string>
    <string name="footer_test">-பாப்-</string>

    <string name="guidance_prayer">பிரபுவே, என் இறைவா, ஒளி உமக்கே  உரியதாகட்டும்! உமது மாட்சிமைமிகு வலிமை என்னும் நதியினைப் புலனாக்குவீராக; அதனால் உமது ஒருமை என்னும் நீர், அனைத்துப் பொருள்களின் மெய்ம்மையிலிருந்து அந்தளவு சுரந்தொழுகிடும
                                   ாக; அதனால் உமது தவறா வ்ழிகாட்டுதல் என்னும் கொடி உமது கட்டளை என்னும் இராஜ்யத்தில் உயர ஏற்றப்பட்டு, தெய்வீகச் சுடரொளி வீசிடும் விண்வீன்கள் உமது மாட்சிமை என்னும் சுவர்க்கத்தினில் பிரகாசித்திடுமாக. உமக்கு விருப்பமானதைச்
                                   செய்திடும் ஆற்றல் படைத்தவர் நீரே. மெய்யாகவே, ஆபத்தில் உதவுபவரும், சுயஜீவியும் நீரே ஆவீர்.
    </string>

    <string name="title_guidance">வழிகாட்டுதல் - Guidance</string>
    <string name="footer_guidance">-பஹாவுல்லா-</string>

    <string name="convenant_prayer">என் பிரபுவே, என் நம்பிக்கையே !உமது  அன்பர்களை உமது வலுமிகு ஒப்பந்தத்தில் உறுதியுடன் இருக்கவும், உமது தெளிவான சமயத்தின்பால் விசுவாசமுடன் இருக்கவும், பிரகாசங்கள் என்னும் திருநூலில் நீர் விதித்துள்ள கட்டளைகளை நிறைவேற்றவும்,
                                    அவர்களுக்கு உதவிடுவீராக; அதனால் அவர்கள் வழிகாட்டுதல் என்னும் விருதுக்கொடிகளாகவும், விண்ணுலகத் திருகூட்டத்தினரின் விளக்குகளாகவும், உமது முடிவில்லா மெய்யறிவு என்னும் ஊற்றுகளாகவும், தெய்வீக வானிலிருந்து ஒளிர்ந்தவாறு நேர்வழி
                                    காட்டிடும் விண்மீன்களாகவும் ஆகக் கூடும். மெய்யாகவே, நீரே வெற்றி கொண்டிட  இயலாதவர்; எல்லாம் வல்லவர், சர்வ சக்தி வாய்ந்தவர்.
    </string>

    <string name="title_convenant">ஒப்பந்தத்தில்  உறுதியாயிருத்தல் - Covenant</string>
    <string name="footer_convenant">-அப்துல் பஹா-</string>

    <string name="children_prayer">அன்புமிக்கப் பிரபுவே! இவ்வழகிய குழந்தைகள் உமது வலிமை என்னும் விரல்களின் கைவண்ணமும், உமது மேன்மையின் அற்புத அடையாளங்களுமாவர். கடவுளே! இக் குழந்தைகளைப் பாதுகாத்து, அவர்கள் கல்வியளிக்கப்பட கிருபையுடன் உதவி, மானிட உலகிற்கு
                                   அவர்கள் சேவை ஆற்றிடச் சக்தி அளிப்பீராக. கடவுளே! இக்குழந்தைகள் முத்துக்கள்; அவர்களை உமது அன்புப் பரிவு எனும் சிப்பியினுள்  பேணி வளர்த்திடுவீராக.நீரே கொடைவள்ளல், அனைத்தின் மீதும் அன்புடையவர்.
    </string>
    <string name="title_children">குழந்தைகள் - Children</string>
    <string name="footer_children">-அப்துல் பஹா-</string>


    <string name="help_prayers">இன்னல் தீர்ப்போன் இறைவனன்றி   யாருளர்?
                                சொல்: இறைவனே போற்றி!
                                அவரே கடவுள்!
                                யாவரும் அவர் ஊழியர்,
                                யாவரும் அவர் சொற் பணிவர்.
    </string>
    <string name="title_help">உதவி - Help and Assistant</string>
    <string name="footer_help">-பாப்-</string>


    <string name="spritual_prayers">இறைவா, என் ஆன்மாவைப் புத்துணர்வு பெறச் செய்து எனக்குக் களிப்பூட்டுவீராக. என் உள்ளத்தைத் தூய்மைப்படுத்துவீராக. என் சக்திகளை ஒளிபெறச் செய்வீராக. எல்லாக் காரியங்களையும் அடியேன் உமது கரங்களில் ஒப்படைக்கின்றேன். நீரே எனது வழிகாட்டியும்
                                    அடைக்கலமுமாய் இருக்கின்றீர். இனிமேலும் நான் துக்கமும் துயரமும் கொண்டிடேன். நான் மகிழ்ச்சியும் பூரிப்பும் கொண்ட பிறவியாக இருப்பேன். இறைவா, இனிமேல் ஒருபோதும் நான் கலக்கம் மிகுந்த பிறவியாக இருந்திடேன். துன்பங்கள் என்னைக் கவலைக்குள்ளாக்கவும்
                                    அனுமதித்திடேன். வாழ்க்கையின் வெறுக்கத் தக்க காரியங்களில் எண்ணத்தை இலயிக்க விடேன். இறைவா, நான் என்னிடம் காட்டிடும் நட்பைவிட, நீர் என்னிடம் காட்டிடும் நட்பே அதிகம். என் பிரபுவே, உமக்கு என்னையே அர்ப்பணிக்கின்றேன்
    </string>

    <string name="title_spritual">ஆன்மீக வளர்ச்சி - Spiritual Growth</string>
    <string name="footer_spritual">-அப்துல் பஹா-</string>

    <string name="healing_prayer">என் கடவுளே, உந்தன் நாமமே என்னைக் குணப்படுத்தும்; உந்தன் நினைவே எனது சிகிச்சை;  உமதருகாமையே எனது நம்பிக்கை; நின்றன்பால் அன்பே எனது தோழன். என்மீதுள்ள உமது இரக்கமே இம்மையிலும், மறுமையிலும் எனக்குச் சிகிச்சையும், உதவியுமாகும். மெய்யாகவே எல்லாம்
                                  அறிந்தவரும் சர்வஞானியும், கொடைவள்ளலும் நீரே ஆவீர்.

    </string>

    <string name="title_healing">குணப்படுத்துதல் - Healing</string>
    <string name="footer_healing"> -பஹாவுல்லா-</string>


    <string name="obligatory_prayer">(இப்பிரார்த்தனையை தினசரி ஒரு முறை, (நண்பகலுக்கும் சூரிய அஸ்தமனத்திற்கும் இடையில் கூற வேண்டும்.)
                                     என் கடவுளே, தங்களை அறிந்து வழிபடுவதற்கெனவே என்னைப் படைத்திருக்கின்றீர் என்பதற்கு நான் சாட்சியமளிக்கின்றேன். இத்தருணம் என் பலவீனத்திற்கும் உந்தன் வலிமைக்கும், என் வறுமைக்கும் உந்தன் செல்வத்திற்கும் சாட்சியம் கூறுகின்றேன்.ஆபத்தில் உதவுபவரும், தனித்தியங்க வல்லவரும்
                                     தாங்களன்றி வேறெவருமிலர்.


    </string>
    <string name="title_obligatory">சுருக்கமான கட்டாயப்பிரார்த்தனை - Obligatory prayer</string>
    <string name="footer_obligator">-பஹாவுல்லா-</string>

    <string name="general_prayer">கடவுளின் நாமம் மொழியப்பட்டு,
                                  அவரது புகழ் பாடப்படும்’
                                  ஸ்தலமும், இல்லமும்,
                                  இடமும், நகரமும்,
                                  இதயமும், மலையும், புகலிடமும்,
                                  குகையும், பள்ளத்தாக்கும்,
                                  தேசமும், கடலும், தீவும்,
                                  புல்வெளியும்
                                  ஆசிபெற்றதாகும்
    </string>
    <string name="title_general">General Prayer</string>
    <string name="footer_general">-பஹாவுல்லா-</string>

</resources>
