<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_Grey"
    android:paddingTop="@dimen/padding_on_top"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/containercolor"
        android:elevation="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:id="@+id/title"
            android:textSize="@dimen/font_size"
            android:textColor="@color/fontcolor"
            android:textStyle="bold"
            android:gravity="center_vertical"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/morning_prayer"
            android:id="@+id/content"
            android:paddingTop="@dimen/padding_on_top"
            android:textColor="@color/fontcolor"
            android:textSize="@dimen/font_size"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/footer"
            android:paddingTop="5dp"
            android:textSize="@dimen/font_size"
            android:textColor="@color/fontcolor"
            android:textStyle="bold"/>

    </LinearLayout>

</RelativeLayout>


