<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_Grey">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:orientation="vertical"
            android:background="@color/colorPrimary"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/title_children"
                android:id="@+id/title"
                android:textSize="@dimen/font_size"
                android:textColor="@color/fontcolor"
                android:textStyle="bold"
                android:gravity="center"
               />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9"
            android:background="@color/containercolor"

            android:paddingBottom="10dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:elevation="20dp"
                android:gravity="center">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/children_prayer"
                    android:id="@+id/content"
                    android:textColor="@color/fontcolor"
                    android:textSize="@dimen/font_size"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/footer_children"
                    android:paddingTop="10dp"
                    android:textSize="@dimen/font_size"
                    android:textColor="@color/fontcolor"
                    android:textStyle="bold"
                    android:gravity="center"/>


            </LinearLayout>


        </LinearLayout>

    </LinearLayout>



</RelativeLayout>


